--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,10 +10,10 @@
 <view wx:if="{{ !scanDining }}" class="box">
   <view class="shop-name">
     <view class="name" bindtap="selectshop">{{shopInfo.name}}</view>
-    <view class="select">
+    <!-- <view class="select">
       <view class="{{peisongType == 'zq' ? 'on' : 'off'}}" data-type="zq" bindtap="changePeisongType">自取</view>
       <view class="{{peisongType == 'kd' ? 'on' : 'off'}}" data-type="kd" bindtap="changePeisongType">外卖</view>
-    </view>
+    </view> -->
   </view>
   <view class="distance-bar">
     <view class="distance">距离您{{shopInfo.distance}}千米</view>
